--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: aqua;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-content {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.App-left {
+  flex: 2;
+}
+
+.App-right {
+  flex: 1;
+}
+
+.bot-collection, .your-bot-army {
+  margin: 20px 0;
+}
+
+.bot-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.bot-card {
+  width: 200px;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.sort-bar {
+  margin-bottom: 20px;
+}
+
+.sort-bar button {
+  margin-right: 5px;
+  background-color: blue;
+  width: 70px;
   color: white;
+  border-radius: 5px;
+  cursor: pointer;
+    padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-bot-specs {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 20px 0;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-filter {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 10px;
+ 
+}
+
+.App-filter button {
+  margin-left: 10px;
 }
